<resources>
    <string name="app_name">Chics Connect</string>
    <string name="title_home">Find</string>
    <string name="title_dashboard">Activities</string>
    <string name="title_notifications">Users</string>
    <string name="title_world">World</string>

    <string name="title_home_splash">Find chics around you</string>

    <string name="welcome">Welcome to Chics Connect\nStart this new journey</string>
    <string name="login_welcome_message">Connecting Women Worldwide</string>
    <string name="login_about_message">ChicsConnect App is creating a trusted community of girls where they can find and make new friends and find personal or professional help, grow, collaborate and beat stress.</string>

    <string name="message">Message</string>
    <string name="view_profile">View Profile</string>

    <string name="home_name">Name</string>
    <string name="your_bio">your bio</string>
    <string name="phone_num">phone number</string>
    <string name="referral_code">referer code</string>
    <string name="home_city">home city</string>
    <string name="home_state">home state</string>
    <string name="home_country">home country</string>
    <string name="finishSetup">Create Profile</string>

    <string name="country">Select Country</string>
    <string name="state">Select State</string>
    <string name="city">Select City</string>
    <string name="category">Select Category</string>

    <string name="start">start</string>

    <string name="user_event">Your Activities</string>

    <string name="join_event">Join</string>
    <string name="chat_event">Chat Group</string>
    <string name="title_activity_detail_event">DetailEventActivity</string>

    <string name="action_settings">Settings</string>
    <string name="event_fees">Price</string>
    <string name="event_about">About</string>
    <string name="event_place">Place</string>
    <string name="event_time">Time</string>
    <string name="large_text">Layout container for a view hierarchy that can be scrolled by the user, allowing it to be larger than the physical display. A ScrollView is a FrameLayout, meaning you should place one child in it containing the entire contents to scroll; this child may itself be a layout manager with a complex hierarchy of objects. A child that is often used is a LinearLayout in a vertical orientation, presenting a vertical array of top-level items that the user can scroll through.</string>
    <string name="user_create_event">Create Activity</string>

    <string name="event_name">Event Name</string>
    <string name="event_des">Event Description</string>
    <string name="event_add">Event Address</string>
    <string name="event_city">Event City</string>
    <string name="event_state">Event State</string>
    <string name="event_country">Event Country</string>
    <string name="event_date">Event Date</string>

    <string name="user_profile">Profile</string>

    <string name="write_caption">What\'s on your mind?</string>
    <string name="post">Post</string>

    <string name="event_start_time">Starting Time</string>
    <string name="event_end_time">Ending Time</string>
</resources>
