<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/map"
        android:title="@string/title_home"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/activity"
        android:title="@string/title_dashboard"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/users"
        android:title="@string/title_notifications"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/navigation_world"
        android:icon="@drawable/world"
        android:title="@string/title_world"
        app:showAsAction="ifRoom"/>
</menu>
