<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/map"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text="@string/title_home"
        android:textColor="@android:color/white"
        android:background="@drawable/circle"/>

    <Button
        android:id="@+id/user"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text="@string/title_notifications"
        android:textColor="@android:color/white"
        android:background="@drawable/circle"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/event"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text="@string/title_dashboard"
        android:textColor="@android:color/white"
        android:background="@drawable/circle"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/world"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:text="@string/title_world"
        android:textColor="@android:color/white"
        android:background="@drawable/circle"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />

</RelativeLayout>