<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="and.com.cswithandroid.DetailEventActivity"
    tools:showIn="@layout/activity_detail_event">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:padding="4dp"
            android:text="Created By"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/event_creater_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:padding="4dp"
            android:textSize="16sp"
            tool:text="@string/large_text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:padding="4dp"
            android:text="@string/event_fees"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/event_fees_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:padding="4dp"
            android:textSize="16sp"
            tool:text="FREE" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:padding="4dp"
            android:text="@string/event_place"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/event_place"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:padding="4dp"
            tool:text="Surajpole, Udaipur\nRajasthan, India"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:padding="4dp"
            android:text="@string/event_time"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/event_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:padding="4dp"
            tool:text="SAT 24 Sep 8:00AM"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:padding="4dp"
            android:text="@string/event_about"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/event_des_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:padding="4dp"
            android:textSize="16sp"
            tool:text="@string/large_text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_marginTop="4dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/event_join_dialog"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text="@string/join_event"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/event_chat_dialog"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="4dp"
                android:layout_weight="1"
                android:background="@color/colorAccent"
                android:text="@string/chat_event"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </LinearLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>
