<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

            <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:id="@+id/user_profile_image"
                android:src="@drawable/imagehere"
                android:layout_gravity="center"
                android:padding="8dp"
                android:background="@drawable/edit_box"/>

            <TextView
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:lines="1"
                android:ellipsize="end"
                android:textStyle="bold"
                android:padding="8dp"
                android:layout_margin="4dp"
                android:textSize="16sp"
                tool:text="Akshay Nandwana"
                android:background="@drawable/edit_box"/>

            <TextView
                android:id="@+id/user_emailid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_margin="4dp"
                android:maxLines="1"
                android:lines="1"
                android:ellipsize="end"
                android:textSize="14sp"
                tool:text="abc@gmail.com"
                android:background="@drawable/edit_box"/>

            <EditText
                android:id="@+id/user_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:ellipsize="end"
                android:lines="3"
                android:maxLines="3"
                android:padding="8dp"
                android:layout_margin="4dp"
                android:textSize="14sp"
                android:hint="@string/your_bio"
                tool:text="Developer: Android Developer Nanodegree. Less Human, More Being. Storyteller. Explorer Local Guide. Android Facilitator."
                android:background="@drawable/edit_box"/>

            <EditText
                android:id="@+id/user_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_margin="4dp"
                android:hint="@string/phone_num"
                android:inputType="phone"
                android:maxLines="1"
                android:lines="1"
                android:ellipsize="end"
                android:textSize="14sp"
                tool:text="123"
                android:background="@drawable/edit_box"/>

            <EditText
                android:id="@+id/user_home_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_margin="4dp"
                android:hint="@string/home_city"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:lines="1"
                android:ellipsize="end"
                android:textSize="14sp"
                tool:text="Udaipur"
                android:background="@drawable/edit_box"/>

            <EditText
                android:id="@+id/user_home_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_margin="4dp"
                android:hint="@string/home_state"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:lines="1"
                android:ellipsize="end"
                android:textSize="14sp"
                tool:text="Rajasthan"
                android:background="@drawable/edit_box"/>

            <EditText
                android:id="@+id/user_home_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_margin="4dp"
                android:hint="@string/home_country"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:lines="1"
                android:ellipsize="end"
                android:textSize="14sp"
                tool:text="India"
                android:background="@drawable/edit_box"/>

            <Button
                android:id="@+id/create_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/finish_button_bg"
                android:textColor="@android:color/white"
                android:layout_margin="4dp"
                android:text="@string/finishSetup"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</ScrollView>
